syntax = "proto3";

package api;

// Email service sends email. Implementation is done via SendGrid provider.
service Email {
    rpc Send(stream SendRequest) returns (SendResponse) {}
}

// SendRequest is the request to send email. This data is streamed from client
// to the server.
message SendRequest {
    string to_email = 1;
    string to_name = 2;
    string from_email = 3;
    string from_name = 4;
    string subject = 5;
    bytes body = 6;
}

// SendResponse is the response from the server after email is sent.
message SendResponse {
    int64 status_code = 1;
    string body = 2;
    map<string, ListOfString> headers = 3;
}

// ListOfString is a list of strings
message ListOfString {
    repeated string value = 1;
}
